Distinguish between section and subsections.

--- a/04-game-mechanics.6
+++ b/04-game-mechanics.6
@@ -1,4 +1,5 @@
-.SH Game mechanics
+.ss 12 0
+.TH "Game Mechanics" "Eclipse Phase"
 .PP
 In every game, there comes a time when the gamemaster must decide if a
 character succeeds or fails in an action.
@@ -323,8 +324,9 @@ The robotic leg on Eva's synthetic morph has been badly damaged, so she
 needs to repair it.
 Max and Vic both sit down and help her out, giving her a +20 modifier
 (+10 for each helper) to her Hardware: Robotics Test.
+
 .RE
-.SS Types of tests
+.SH Types of tests
 .PP
 There are two types of tests in Eclipse Phase: Success and Opposed.
 .SS Success tests
@@ -563,8 +565,9 @@ Jaqui rolls a 48\[em]a success\[em]but the AI rolls a 14\[em]also a
 success.
 In this circumstance, Jaqui succeeds in hacking in, but the AI is aware
 of the infiltration and can take active countermeasures against her.
+
 .RE
-.SS Time and actions
+.SH Time and actions
 .PP
 Though the gamemaster is responsible for managing the speed at which
 events unfold, there are times when it is important to know exactly who
@@ -639,7 +642,9 @@ test.
 For every 10 percent they wish to reduce the timeframe, they incur a
 \[en]10 modifier on the test (to a maximum reduction of 60 percent with
 a maximum modifier of \[en]60).
-.SS Defining your character
+
+.RE
+.SH Defining your character
 .PP
 In order to gauge and quantify what your character is merely good at and
 what they excel in\[em]or what they are clueless about and suck
@@ -1141,8 +1146,9 @@ maximum of 20.
 For the duration of the period she inhabits that morph, her Cognition is
 reduced to 20, which also impacts all of her COG\-linked skills,
 reducing them by 5.
+
 .RE
-.SS Things characters use
+.SH Things characters use
 .PP
 In the advanced technological setting of Eclipse Phase, characters don't
 get by on their wits and morphs alone; they take advantage of their
@@ -1336,7 +1342,9 @@ Psi users are called asyncs.
 A full explanation of psi and details on the various sleights can be
 found in the Mind Hacks chapter, p.
 216.
-.SS Game rules summary
+
+.RE
+.SH Game rules summary
 .PP
 Everything you need to know about the rules\[em]summed up on a single
 page.
