Finish cleaning up 04-game-mechanics

--- a/04-game-mechanics.6
+++ b/04-game-mechanics.6
@@ -14,7 +14,7 @@ The English language has a bit of a bias towards male\-gendered pronouns that we
 For purposes of this game, we've sidestepped some of these gender neutrality quandaries by adopting the \[lq]Singular They\[rq] rule.
 What this means is that rather than just going with male pronouns (\[lq]he\[rq]) or switching between gendered pronouns (\[lq]he\[rq] in one chapter, \[lq]she\[rq] in the next), we have adopted the use of \[lq]they\[rq] even when referring to a single person.
 To some folks, this is bad grammar, but there is actually some good evidence that this usage has strong historical roots (look it up), and it certainly gives our editors fewer headaches.
-When referring to specifi c characters, we use the gendered pronoun appropriate to the character's personal gender identity, no matter the sex of the morph they are in.
+When referring to specific characters, we use the gendered pronoun appropriate to the character's personal gender identity, no matter the sex of the morph they are in.
 
 .SS The ultimate rule
 
@@ -65,8 +65,8 @@ If you roll higher than the target number, you fail.
 
 A roll of 00 is always considered a success.
 A roll of 99 is always a failure.
-.RS
 
+.RS
 Jaqui's character needs to make a skill test.
 Her skill is 55.
 Jaqui takes two ten\-sided dice and rolls a 53\[em]she succeeds!
@@ -112,8 +112,8 @@ applying additional modifiers to the target number and adjusting the likelihood 
 
 For simplicity, modifiers are applied in multiples of 10 and come in three levels of severity: Minor (+/\[en]10), Moderate (+/\[en]20), and Major (+/\[en]30).
 Any number of modifiers may be applied, as the gamemaster deems appropriate, but the cumulative modifiers may not exceed + or \[en] 60.
-.RS
 
+.RS
 Jaqui is attempting to leap from one door to another across a large chamber in zero gravity.
 She's in a hurry.
 If she misses the door, she'll lose valuable time, so the gamemaster calls for a Freefall Skill Test.
@@ -134,8 +134,8 @@ They can also result in some sort of unexpected secondary effect: you repair the
 Alternately, a critical can be used to give a boost (or a hindrance) to a follow\-up action.
 For example, you not only spot a clue, but you immediately suspect it to be red herring; or you not only fail to strike the target, but your weapon breaks, leaving you defenseless.
 Gamemasters are encouraged to be inventive with their use of criticals and choose results that create comedy, drama, or tension.
-.RS
 
+.RS
 Audrey is attempting to intimidate a low\-level triad mook into giving her information.
 Unfortu\- nately she rolls a 99\[em]a critical failure.
 Not only does she fail to scare the guy, but she accidentally lets slip an important piece of information that she didn't want the triad to know.
@@ -152,8 +152,8 @@ Skills that may not be defaulted on are noted on the Skill List (p. 176) and in 
 
 In rare cases, a gamemaster might allow a character to default to another skill that also relates to a test (see p. 173).
 When allowed, defaulting to another skill incurs a \[en]30 modifier.
-.RS
 
+.RS
 Toljek is trying to casually sneak inside a hypercorp facility when he unexpectedly runs into a hypercorp employee.
 The woman he's encountered doesn't necessarily have grounds to be suspicious of Toljek's presence, but the gamemaster calls for Toljek to make a Protocol Test to pass himself off as someone that belongs there.
 Unfortunately, Toljek doesn't have that skill, so he must default to its linked aptitude, Savvy, instead.
@@ -165,8 +165,8 @@ His Savvy score is only 18, so Toljek better hope he gets lucky.
 Rather than looking up and accumulating a long list of modifiers for each action and doing the math, the gamemaster can instead choose to simply \[lq]eyeball\[rq] the situation and apply the modifier that best sums up the net effect.
 This method is quicker and allows for easier test resolution.
 One way to eyeball the situation is to simply apply the most severe modifier affecting the situation.
-.RS
 
+.RS
 Tyska is trying to escape from some thing that's chasing him through a derelict habitat.
 The gamemaster calls for a Freerunning Test, but there are a number of modifying conditions: it's dark, he's running with a flashlight, and there's debris everywhere.
 Tyska, however, has an entoptic map of the best route out of there to help him out.
@@ -177,8 +177,8 @@ The gamemaster assesses the situation and decides the overall effect is that the
 
 If you wish to develop a more cinematic feel for your game, or if you simply wish to encourage your players to invest more detail and creativity into the storyline, you can award \[lq]narrative modifiers\[rq] to a character's test when that player describes what the character is doing in exceptionally colorful, inventive, or dramatic detail.
 The better the detail, the better the modifier.
-.RS
 
+.RS
 Cole doesn't just want his character to jump over the table, he wants to make an impact.
 Cole tells the gamemaster that his character kicks a chair out of the way, rolls over the dinner table on his shoulder, grabs a fork as he does it, makes sure to knock all of the fine china on the floor, then lands on his feet in a defensive martial arts posture, fork raised high.
 The gamemaster decides the extra description is worth +10 to his Freerunning Test.
@@ -190,8 +190,8 @@ If two or more characters join forces to tackle a test together, one of the char
 This leading character will usually (but not always) be the one with the highest applicable skill.
 The primary acting character is the one who rolls the test, though they receive a +10 modifier for each additional character helping them out, up to a maximum +30 modifier.
 Note that helping characters do not necessarily need to know the skill being used if the gamemaster decides that they can follow the primary actor's lead.
-.RS
 
+.RS
 The robotic leg on Eva's synthetic morph has been badly damaged, so she needs to repair it.
 Max and Vic both sit down and help her out, giving her a +20 modifier (+10 for each helper) to her Hardware: Robotics Test.
 
@@ -213,8 +213,8 @@ If they roll higher than the target number, the test fails.
 .SS Trying again
 
 If you fail at a test, you can take another shot.
-Each subsequent attempt at an action after a failure, however, incurs a cumulative \[en]10 modifier.
-That means the second try suffers \[en]10, the third \[en]20, the fourth \[en]30, and so on, up to the maximum \[en]60.
+Each subsequent attempt at an action after a failure, however, incurs a cumulative \-10 modifier.
+That means the second try suffers \-10, the third \-20, the fourth \-30, and so on, up to the maximum \-60.
 
 .SS Taking the time
 
@@ -232,8 +232,8 @@ For certain tests it may not be appropriate, however, if the gamemaster decides 
 In that case, the gamemaster simply rules that taking the time has no effect.
 
 For Task action tests (p. 120), which already take time to complete, the duration of the task must be increased by 50 percent for each +10 modifier gained for taking extra time.
-.RS
 
+.RS
 Srit is searching through an abandoned space\- ship, looking for a sign of what happened to the missing crew.
 The gamemaster tells her it will take twenty minutes to search the whole ship.
 She wants to be extra thorough, however, so she takes an extra thirty minutes.
@@ -246,8 +246,8 @@ In some circumstances, the gamemaster may not be concerned that a character migh
 In this case, the gamemaster calls for a Simple Success Test, which is handled just like a standard Success Test (p. 117).
 Rather than determining success or failure, however, the test is assumed to succeed.
 The roll determines whether the character succeeds strongly (rolls equal to or less than the target number) or succeeds weakly (rolls above the target number).
-.RS
 
+.RS
 Dav is taking a short spacewalk between two parked ships.
 The gamemaster determines that this is a routine operation and calls for Dav to make a Simple Success Test using the Freefall skill.
 Dav's skill is only 35.
@@ -261,8 +261,8 @@ Sometimes it may be important that a character not only succeeds, but that they 
 This is usually true of situations where the challenge is not only difficult but the action must be pulled off with finesse.
 Tests of this sort may call for a certain Margin of Success (MoS)\[em]an amount by which the character must roll under the target number.
 For example, a character facing a target number of 55 and a MoS of 20 must roll equal to or less than a 35 to succeed at the level the situation calls for.
-.RS
 
+.RS
 An enemy has thrown an incendiary device near Stoya.
 She has only a moment to act and decides to try to kick it away from herself.
 Even better, she hopes to kick it into the open maintenance hatch a dozen meters away.
@@ -274,8 +274,8 @@ Her aim is off, but the gamemaster decides that the device rebounds off some mac
 
 At other times, it may be important to know how badly a character fails, as determined by a Margin of Failure (MoF), which is the amount by which the character rolled over the target number.
 In some cases, a test may note that a character who fails with a certain MoF may suffer additional consequences for failing so dismally.
-.RS
 
+.RS
 Nico is trying to sketch out a picture of someone's face.
 He has eidetic memory, but his drawing needs to be good enough for someone else to identify the person.
 He rolls against his Art: Drawing skill of 34, scoring a 97\[em]a MoF of 63.
@@ -288,8 +288,8 @@ Excellent Successes and Severe Failures are a method used to benchmark successes
 Excellent Successes are used in situations where an especially good roll may boost the intended effect, such as inflicting more damage with a good hit in combat.
 Severe Failures denote a roll that is particularly bad and has a worse effect than a simple failure.
 Neither Excellent Successes or Severe Failures are as good or bad as criticals, however.
-.RS
 
+.RS
 Stoya has been caught in a deal gone bad.
 She moves to kick her opponent using her Unarmed Combat of 65.
 She rolls a 33 (for an MoS of 32), and her opponent rolls a 21 (also successful, but less than Stoya, so she wins).
@@ -311,8 +311,8 @@ Note that critical successes trump high rolls in an Opposed Test\[em]if both cha
 Care must be taken when applying modifiers in an Opposed Test.
 Some modifiers will affect both participants equally, and should be applied to both tests.
 If a modifier arises from one character's advantage in relation to the other, however, that modifier should only be applied to benefit the favored character; it should not also be applied as a negative modifier to the disadvantaged character.
-.RS
 
+.RS
 Zhou has been hired by the Jovian Republic to infiltrate his old pirate band.
 Even though he's resleeved in a new skin, he's worried that one of his old buddies, Wen, might recognize his mannerisms, since they lived, whored, and raided together for years.
 After Zhou has spent some time in Wen's company, the gamemaster makes a secret Opposed Test, pitting Zhou's Impersonation skill of 57 against Wen's Kinesics of 34.
@@ -335,8 +335,8 @@ In this case, the MoS/MoF is still determined by the difference between the char
 In some cases, the rules will call for a Variable Opposed Test, which allows for slightly more outcomes than a standard Opposed Test.
 If both characters succeed in a Variable Opposed Test, then an outcome is obtained which is different from just one character winning over the other.
 The exact outcomes are noted with each specific Variable Opposed Test.
-.RS
 
+.RS
 Jaqui needs to hack into a local network to retrieve some video footage.
 The network is ac\- tively defended by an AI, so a Variable Opposed Test is called for, pitting Jaqui's Infosec skill of 48 against the AI's Infosec of 25.
 Jaqui rolls a 48\[em]a success\[em]but the AI rolls a 14\[em]also a success.
@@ -359,7 +359,7 @@ Each character's Speed stat (p. 121) determines the amount of actions they can t
 
 The types of actions a character may take in an Action Turn are broken down to: Automatic, Quick, Complex, and Task actions.
 
-.SS automatic actions
+.SS Automatic actions
 
 Automatic actions are \[lq]always on\[rq] and require no effort from the character, assuming they are conscious.
 
@@ -409,7 +409,7 @@ Your character's concept will likely be influenced by two important factors: bac
 Your background denotes the circumstances under which your character was raised, while your faction indicates the post\-Fall grouping to which you most recently held ties and allegiances.
 Both of these play a role in character creation (p. 128).
 
-.SS motivations
+.SS Motivations
 
 The clash of ideologies and memes is a core component of Eclipse Phase, and so every character has three motivations\[em]personal memes that dominate the character's interests and pursuits.
 These memes may be as abstract as ideologies the character adheres to or supports\[em]for example, social anarchism, Islamic jihad, or
@@ -449,115 +449,123 @@ It is important that you keep ego\- and morph\-derived characteristics straight,
 
 Your character's stats measure several characteristics that are important to game play: Initiative, Speed, Durability, Wound Threshold, Lucidity, Trauma Threshold, and Moxie.
 Some of these stats are inherent to your character's ego, others are influenced or determined by morph.
-.RS
 
+.RS
 \f[B]Ego stats\f[]
 .IP \[bu] 2
 Initiative
 .IP \[bu] 2
 Lucidity
 .IP \[bu] 2
-Trauma
+Trauma Threshold
 .IP \[bu] 2
-Threshold
-.IP \[bu] 2
-Insanity
-.IP \[bu] 2
-Rating
+Insanity Rating
 .IP \[bu] 2
 Moxie
 .RE
-.RS
 
+.RS
 \f[B]Morph stats\f[]
 .IP \[bu] 2
 Speed
 .IP \[bu] 2
 Durability
 .IP \[bu] 2
-Wound
+Wound Threshold
 .IP \[bu] 2
-Threshold
+Death Rating
 .IP \[bu] 2
-Death
-.IP \[bu] 2
-Rating
-.IP \[bu] 2
-Damage
-.IP \[bu] 2
-Bonus
+Damage Bonus
 .RE
 
-.SS Initiative (init)
+.RS 1
+\fBInitiative (INIT)\fR
 
+.RS 2
 Your character's Initiative stat helps determine when they act in relation to other characters during the Action Turn (see Initiative, p. 188).
 Your Initiative stat is equal to your character's Intuition + Reflexes aptitudes (see Aptitudes, p. 123) multiplied by 2.
 Certain implants and other factors may modify this score.
-.RS
 
+.RS 3
 Lazaro's Intuition is 15 and his Reflexes score is 20.
 That means his Initiative is 70 (15 + 20 = 35, 35 x 2 = 70).
 .RE
+.RE
 
-.SS Speed (spd)
+\fBSpeed (SPD)\fR
 
+.RS 2
 The Speed stat determines how often your character gets to act in an Action Turn (see Initiative, p. 188).
 All characters start with a Speed stat of 1, meaning they act once per turn.
 Certain implants and other advantages may boost this up to a maximum of 4.
+.RE
 
-.SS Durability (dur)
+\fBDurability (DUR)\fR
 
+.RS 2
 Durability is your morph's physical health (or structural integrity in the case of synthetic shells, or system integrity in the case of infomorphs).
 It determines the amount of damage your morph can take before you are incapacitated or killed (see Physical Health, p. 206).
 
 Durability is unlimited, though the range for baseline (unmodified) humans tends to fall between 20 and 60.
 Your Durability stat is determined by your morph.
+.RE
 
-.SS Wound threshold (wt)
+\fBWound Threshold (WT)\fR
 
+.RS 2
 A Wound Threshold is used to determine if you receive a wound each time you take physical damage (see Physical Health, p. 206).
 The higher the Wound Threshold, the more resistant to serious injury you are.
 
 Wound Threshold is calculated by dividing Durability by 5 (rounding up).
 
-.SS Death rating (dr)
+.RE
+\fBDeath Rating (DR)\fR
 
+.RS 2
 Death Rating is the total amount of damage your morph can take before it is killed or destroyed beyond repair.
 Death Rating is equal to DUR x 1.5 for biomorphs and DUR x 2 for synthmorphs.
-.RS
 
+.RS 3
 Tyska is sleeved in a run\-of\-the\-mill splicer morph with a Durability of 30.
 That gives him a Wound Threshold of 6 (30 / 5) and a Death Rating of 45 (30 x 1.5).
 If Tyska acquired an implant that boosted his Durability by +10 to 40, his Wound Threshold would be 8 (40 / 5) and his Death Rating would be 60 (40 x 1.5).
 .RE
 
-.SS Lucidity (luc)
+.RE
+\fBLucidity (LUC)\fR
 
+.RS 2
 Lucidity is similar to Durability, except that it measures mental health and state of mind rather than physical well\-being.
 Your Lucidity determines how much stress (mental damage) you can take before you are incapacitated or driven insane (see Mental Health, p. 209).
 
 Lucidity is unlimited, but generally ranges from 20 to 60 for baseline unmodified humans.
 Lucidity is determined by your Willpower aptitude x 2.
 
-.SS Trauma threshold (tt)
+.RE
+\fBTrauma Threshold (TT)\fR
 
+.RS 2
 The Trauma Threshold determines if you suffer a trauma (mental wound) each time you take stress (see Mental Health, p. 209).
 A higher Trauma Threshold means that your mental state is more resilient against experiences that might inflict psychiatric disorders or other serious mental instabilities.
 
 Trauma Threshold is calculated by dividing Lucidity by 5 (rounding up).
 
-.SS Insanity rating (ir)
+.RE
+\fBInsanity Rating (IR)\fR
 
+.RS 2
 Your Insanity Rating is the total amount of stress your mind can take before you go permanently insane and are lost for good.
 Insanity Rating equals LUC x 2.
-.RS
 
+.RS 3
 Cole's Willpower is 16.
 That makes his Lucidity stat 32 (16 x 2), his Trauma Threshold 7 (32 / 5, rounded up), and his Insanity Rating 64 (32 x 2)
 .RE
 
-.SS Moxie
+.RE
+\fBMoxie\fR
 
+.RS 2
 Moxie represents your character's inherent talent at facing down challenges and overcoming obstacles with spirited fervor.
 More than just luck, Moxie is your character's ability to run the edge and do what it takes, no matter the odds.
 Some people consider it the evolutionary trait that spurred humankind to pick up tools, expand our brains, and face the future head on, leaving other mammals in the dust.
@@ -580,15 +588,17 @@ The character must succeed in the test before they spend the Moxie point.
 The character may ignore a critical failure, treating it as a regular failure instead.
 .IP \[bu] 2
 The character may go first in an Action Phase (p. 189).
+.RE
 
+.RS 2
 Only 1 point of Moxie may be spent on a single roll.
 Moxie points will fluctuate during gameplay, as they are spent and sometimes regained.
 
 Regaining Moxie: At the gamemaster's discretion, Moxie points may be refreshed up to the character's full Moxie stat any time the character rests for a significant period.
 Moxie points may also be regained if the character achieves a personal goal, as determined by their Motivation (see p. 121).
 The gamemaster determines how much Moxie is regained in proportion to the goal achieved.
-.RS
 
+.RS 3
 Audrey has a difficult Piloting: Aircraft roll to make.
 Her skill is 61, but she's facing a lot of modifiers (\[en]30), and if she fails she's in big trouble.
 She could spend a point of Moxie before the test to ignore the modifiers, but she decides to take her chances against the target number of 31.
@@ -596,10 +606,12 @@ Unfortunately, she rolls an 82.
 Luckily, she can spend a Moxie point to flip\-flop that roll and make it a 28\[em]a success!
 .RE
 
-.SS Damage bonus
+.RE
+\fBDamage Bonus\fR
 
 The Damage Bonus stat quantifies how much extra oomph your character is able to give their melee and thrown weapons attacks.
 Damage Bonus is determined by dividing your Somatics aptitude (see below) by 10 and rounding down.
+.RE
 
 .SS Character skills
 
@@ -607,8 +619,10 @@ Skills represent your character's talents.
 Skills are broken down into aptitudes (ingrained abilities that everyone has) and learned skills (abilities and knowledge picked up over time).
 Skills determine the target number used for tests (see Making Tests, p. 115).
 
-.SS Aptitudes
+.RS 1
+\fBAptitudes\fR
 
+.RS 2
 Aptitudes are the core skills that every character has by default.
 They are the foundation on which learned skills are built.
 Aptitudes are purchased during character creation and rate between 1 and 30, with 10 being average for a baseline unmodified human.
@@ -637,9 +651,12 @@ It includes social awareness and manipulation.
 \f[B]Somatics (SOM)\f[] is your skill at pushing your morph to the best of its physical ability, including the fundamental utilization of the morph's strength, endurance, and sustained positioning and motion.
 .IP \[bu] 2
 \f[B]Willpower (WIL)\f[] is your skill for self\-control, your ability to command your own destiny.
+.RE
 
-.SS Learned skills
+.RE
+\fBLearned skills\fR
 
+.RS 2
 Learned skills encompass a wide range of specialties and education, from combat training to negotiating to astrophysics (for a complete skill list, see p. 176).
 Learned skills range in rating from 1 to 99, with an average proficiency being 50.
 Each learned skill is linked to an aptitude, which represents the underlying competency in which the skill is based.
@@ -650,8 +667,10 @@ Depending on your background and faction, you may receive some starting skills f
 Like aptitudes, learned skills stay with the character even when they change morphs, though certain morphs, implants, and other factors may sometimes modify your skill rating.
 If you lack a particular skill called for by a test, in most cases you can default to the linked aptitude for the test (see Defaulting, p. 116).
 
-.SS Specializations
+.RE
+\fBSpecializations\fR
 
+.RS 2
 Specializations represent an area of concentration and focus in a particular learned skill.
 A character who learns a specialization is one who not only grasps the basic tenets of that skill, but they have trained hard to excel in one particular aspect of that skill's field.
 Specializations apply a +10 modifier when the character utilizes that skill in the area of specialization.
@@ -659,12 +678,13 @@ Specializations apply a +10 modifier when the character utilizes that skill in t
 Specializations may be purchased during character creation or advancement for any existing skill the character possesses with a rating of 30 or more.
 Only one specialization may be purchased for each skill.
 Specific possible specializations are noted under individual the skill descriptions (see Skills, p. 170).
-.RS
 
+.RS 3
 Toljek has Palming skill of 63 with a specialization in Pickpocketing.
 Whenever he uses Palming to pick someone's pocket or otherwise steal from someone's person, his target number is 73, but for all other uses of Palming the standard 63 applies.
 .RE
 
+.RE
 .SS Character traits
 
 Traits include a range of inherent qualities and features that help define your character.
@@ -698,8 +718,10 @@ Backing up regularly is always a smart option in case you suffer an accidental o
 Acquiring a new morph is not always easy, especially if you want it pre\-loaded according to certain specifications.
 The full process is detailed under Resleeving, p. 271.
 
-.SS Aptitude Maximums
+.RS 1
+\fBAptitude Maximums\fR
 
+.RS 2
 Every morph has an aptitude maximum, sometimes modified by traits.
 This maximum represents the highest value at which the character may use that aptitude while inhabiting that morph, reflecting an inherent limitation in some morphs.
 If a character's aptitude exceeds the aptitude maximum of their morph, they must use it at the maximum value for the duration of the time they remain in that morph.
@@ -709,11 +731,12 @@ Some implants, gear, psi, and other factors may modify a character's natural apt
 These augmented values may exceed a morph's aptitude maximums, as they represent external factors boosting the morph's ability.
 No aptitude, however, augmented or not, may ever exceed a value of 40.
 Innate ability only takes a person so far\[em]after that point, actual skill is what counts.
-.RS
 
+.RS 3
 Eva has a Cognition aptitude of 25.
 She is unfortunately forced to sleeve into a flat morph with an aptitude maximum of 20.
 For the duration of the period she inhabits that morph, her Cognition is reduced to 20, which also impacts all of her COG\-linked skills, reducing them by 5.
+.RE
 
 .RE
 .SH Things characters use
@@ -785,6 +808,7 @@ The primary reputation networks include:
 \f[B]The Eye:\f[] used by Firewall, noted as i\-rep.
 .IP \[bu] 2
 \f[B]RNA:\f[] Research Network Affiliation, used by argonauts, technologists, scientists, and researchers, referred to as r\-rep.
+.RE
 
 Reputation is rated from 0\-99.
 Depending on your background and faction, you may start with a Rep score in one or more networks.
@@ -847,10 +871,12 @@ Margin of Success of 30+ is an Excellent Success.
 Margin of Failure of 30+ is a Severe Failure.
 .IP \[bu] 2
 A roll of doubles (00, 11, 22, 33, etc.) equals a critical success or failure.
+.RE
 
 .SS Success test (P. 117)
 .IP \[bu] 2
 To succeed, roll d100 and score equal to or less than the skill +/\[en] modifiers.
+.RE
 
 .SS Opposed test (P. 119)
 .IP \[bu] 2
@@ -858,16 +884,19 @@ Each character rolls d100 against their skill +/\[en] modifiers.
 .IP \[bu] 2
 The character who succeeds with the highest roll wins.
 If both characters fail, or both succeed but tie, dead\- lock occurs.
+.RE
 
 .SS Simple success test (P. 118)
 .IP \[bu] 2
 Simple Success Tests automatically succeed.
 .IP \[bu] 2
 Success or failure on the roll simply indicates if the character succeeded strongly or poorly.
+.RE
 
 .SS Defaulting (P. 116)
 .IP \[bu] 2
 If a character does not have the appropriate skill for a test, they may default to the skill's linked aptitude.
+.RE
 
 .SS Modifiers (P. 115)
 .IP \[bu] 2
@@ -884,12 +913,14 @@ Major (+/\[en]30)
 .RE
 .IP \[bu] 2
 The maximum modifiers that can be applied are +/\[en] 60.
+.RE
 
-.SS teamwork (P. 117)
+.SS Teamwork (P. 117)
 .IP \[bu] 2
 One character is chosen as the primary actor; they make the test.
 .IP \[bu] 2
 Each helper character adds a +10 modifier (max. +30).
+.RE
 
 .SS Taking the time (P. 118)
 .IP \[bu] 2
@@ -898,12 +929,14 @@ Character may take extra time to complete an action.
 On Complex actions, each minute taken adds +10 to the test.
 .IP \[bu] 2
 On Task actions, every 50 percent extension to the timeframe adds +10 to the test.
+.RE
 
 .SS Aptitudes (P. 123)
 .IP \[bu] 2
 Aptitudes range from 1 to 30 (average 15).
 .IP \[bu] 2
 Aptitudes are: Cognition, Coordination, Intuition, Reflexes, Savvy, Somatics, and Willpower.
+.RE
 
 .SS Learned skills (P. 123)
 .IP \[bu] 2
@@ -912,12 +945,14 @@ Skills range from 1\-99 (average 50).
 Each skill is linked to and based on an aptitude.
 .IP \[bu] 2
 Morphs, gear, drugs, etc. may provide skill bonuses or penalties to individual skills.
+.RE
 
 .SS Specializations (P. 123)
 .IP \[bu] 2
 Specializations add +10 when using a skill for that area of concentration.
 .IP \[bu] 2
 Each skill may have only one specialization.
+.RE
 
 .SS Action turns (P. 120)
 .IP \[bu] 2
@@ -930,6 +965,7 @@ Automatic actions are always "on."
 Characters may take any number of Quick Actions in a Turn (minimum of 3), limited only by the gamemaster.
 .IP \[bu] 2
 Characters may only take a number of Complex Actions equal to their Speed stat.
+.RE
 
 .SS Task actions (P. 120)
 .IP \[bu] 2
@@ -940,3 +976,4 @@ Task Actions list a timeframe (anywhere from 2 Turns to 2 years).
 Timeframe reduced by 10% for each 10 points of MoS.
 .IP \[bu] 2
 If character fails, they work on the task for a minimum period equal to 10% of the timeframe for each 10 points of MoF before realizing it's a failure.
+.RE
