--- a/05-character-creation-and-advancement.6
+++ b/05-character-creation-and-advancement.6
@@ -1,5 +1,5 @@
 .ss 12 0
-.TH Character Creation and Advancement
+.TH "Character Creation and Advancement" "Eclipse Phase"
 
 .SH Character generation
 
