--- a/07-action-and-combat.6
+++ b/07-action-and-combat.6
@@ -1,5 +1,5 @@
 .ss 12 0
-.TH Action and Combat
+.TH "Action and Combat" "Eclipse Phase"
 
 Roleplaying games are about creating drama and adventure, and that usually means action and combat.
 Action and combat scenes are the moments when the adrenaline really gets pumping and the characters' lives and missions are on the line.
