--- a/09-the-mesh.6
+++ b/09-the-mesh.6
@@ -1,5 +1,6 @@
-.SH The Mesh
-.PP
+.ss 12 0
+.TH "The Mesh" "Eclipse Phase"
+
 Before the Fall, humanity interfaced with each other through the
 internet, interconnected networks that served as the technical backbone
 for the evolving world wide web.
