--- a/10-accelerated-future.6
+++ b/10-accelerated-future.6
@@ -1,5 +1,6 @@
-.SH Accelerated Future
-.PP
+.ss 12 0
+.TH "Accelerated Future" "Eclipse Phase"
+
 The future setting of \f[I]Eclipse Phase\f[] introduces a number of
 technological elements that have a strong impact on transhuman society.
 These include backups and uploading, resleeving, egocasting, forking,
