--- a/11-gear.6
+++ b/11-gear.6
@@ -1,5 +1,6 @@
-.SH Gear
-.PP
+.ss 12 0
+.TH Gear "Eclipse Phase"
+
 The accelerated technological levels of \f[I]Eclipse Phase\f[] enable a
 number of devices for personal enhancement, survival, and other uses.
 .SS Equipment rules
