--- a/12-game-information.6
+++ b/12-game-information.6
@@ -1,6 +1,6 @@
-.SH Game Information
-.RS
-.PP
+.ss 12 0
+.TH "Game Information" "Eclipse Phase"
+
 SPOILERS!
 .PP
 This chapter is full of spoilers, so if you're a player, you probably
