--- a/06-skills.6
+++ b/06-skills.6
@@ -1,5 +1,5 @@
 .ss 12 0
-.TH Skills
+.TH Skills "Eclipse Phase"
 
 In a setting where physical looks and capabilities are easily changed at the push of a button, who you are and what you know is more important than any inborn ability.
 Skills represent the knowledge your character has, the accumulated set of experience, education, and inherent know\-how possessed by each and every sentient transhuman in Eclipse Phase.
