--- a/08-mind-hacks.6
+++ b/08-mind-hacks.6
@@ -205,7 +205,9 @@ Pod\-morphed asyncs suffer a \fI\-30\fR modifier on all tests involving the use 
 
 .RS 1
 Async minds undergo extra difficulty adjusting to new morphs.
-For 1 day after the character has resleeved, they will suffer the effects of a single derangement (p. 210).
+For 1 day after the character has resleeved, they will suffer the effects of a single derangement (
+.BR 07-actions-and-combat "(Eclipse Phase)"
+).
 The gamemaster and player should choose a derangement appropriate to the character and story.
 Minor derangements are recommended, but at the gamemaster's discretion moderate or major derangements may be applied.
 No trauma is inflicted with this derangement.
@@ -230,9 +232,13 @@ An unfortunate side effect to this change is that asyncs acquire a vulnerability
 Reduce the async's Trauma Threshold by 1.
 .IP \[bu] 2
 The mental instability that accompanies psi infection also tends to unhinge the character's mind.
-Asyncs acquires one Mental Disorder negative trait (p. 150) for each level they have of the Psi trait without receiving any bonus CP.
+Asyncs acquires one Mental Disorder negative trait (
+.BR 05-character-creation-and-advancement "(Eclipse Phase)"
+) for each level they have of the Psi trait without receiving any bonus CP.
 The gamemaster and player should agree on a disorder appropriate to the character.
-This disorder may be treated over time, according to normal rules (see Mental Healing and Psychotherapy, p. 215).
+This disorder may be treated over time, according to normal rules (see Mental Healing and Psychotherapy,
+.BR 07-action-and-combat "(Eclipse Phase)"
+).
 .IP \[bu] 2
 Characters with the Psi trait are also vulnerable to infection by other strains of the Exsurgent virus.
 The character suffers a \fI\-20\fR modifier when resisting Exsurgent infection (p. 362).
@@ -248,9 +254,13 @@ They must also succeed in a \fIWIL + COG\fR Test or fall down.
 .RS 1
 Transhuman psi users can manipulate their egos and otherwise create effects that can often be neither matched nor mimicked by technological means.
 To use these abilities, they train their mental processes and practice cognitive algorithms called sleights, which they can subconsciously recall and use as necessary.
-Sleights fall into two categories: psi\-chi (cognitive enhancements, p. 223) and psi\-gamma (brainwave reading and manipulation, p. 225).
-Psi\-chi sleights are available to anyone with the Psi trait (p. 147), but psigamma sleights are only available to characters with the Psi trait at Level 2.
-In order to use these sleights, the async must be skilled in the Control (p. 178), Psi Assault (p. 183), and/or Sense skills (p. 184), as appropriate to each sleight.
+Sleights fall into two categories: psi\-chi (cognitive enhancements, below) and psi\-gamma (brainwave reading and manipulation, below).
+Psi\-chi sleights are available to anyone with the Psi trait (
+.BR 05-character-creation-and-advancement "(Eclipse Phase)"
+), but psigamma sleights are only available to characters with the Psi trait at Level 2.
+In order to use these sleights, the async must be skilled in the Control, Psi Assault, and/or Sense skills (
+.BR 06-skills "(Eclipse Phase)"
+), as appropriate to each sleight.
 
 .RE
 \fBRoleplaying asyncs\fR
@@ -384,17 +394,19 @@ Like full defense in physical combat (
 If the defender rolls a critical success, the character attempting to wield psi is temporarily locked out of the target's mind.
 The psi user may not target that character with sleights until an appropriate \[lq]reset\[rq] period has passed, determined by the gamemaster.
 
-If the async rolls a critical failure, they suffer temporary incapacitation as their mind dysfunctions in some harsh and distressing ways (see Psi Drawbacks, p. 221).
+If the async rolls a critical failure, they suffer temporary incapacitation as their mind dysfunctions in some harsh and distressing ways (see Psi Drawbacks, below).
 
 If a psi user rolls a critical success against a defender, or the defender rolls a critical failure, double the potency of the sleight's effect.
 In the case of psi attacks, the DV can be doubled or mental armor can be bypassed.
-Alternately, when using Psi Assault (p. 183), the targeted character may be in danger of infection by the Watts\-Macleod strain (p. 362).
+Alternately, when using Psi Assault (p. 183), the targeted character may be in danger of infection by the Watts\-Macleod strain (
+.BR 12-game-information "(Eclipse Phase)"
+).
 
 .RE
 \fBMental armor\fR
 
 .RS 1
-The Psi Shield sleight (p. 228) provides mental armor, a form of neural hardening against psi\-based attacks.
+The Psi Shield sleight (below) provides mental armor, a form of neural hardening against psi\-based attacks.
 Like physical armor, this mental armor reduces the amount of damage inflicted by a psi assault.
 
 .RE
@@ -431,7 +443,9 @@ In game terms, every active sleight has a Strain Value of \fI1d10 ÷ 2\fR (round
 Every active sleight lists a Strain Value Modifier that modifies this amount.
 For example, a sleights with a Strain Value Modifier of \fI\-1\fR inflicts (\fI1d10 ÷ 2\fR) \-1 DV.
 
-If the damage points suffered from strain exceed the character's Wound Threshold, they may inflict a wound just like other damage (see Wounds, p. 207).
+If the damage points suffered from strain exceed the character's Wound Threshold, they may inflict a wound just like other damage (see Wounds,
+.BR 07-action-and-combat "(Eclipse Phase)"
+).
 
 .RE
 \f[B]Example\f[]
@@ -780,7 +794,9 @@ Though it is recommended that the player retain control of their character while
 
 Psi\-gamma sleights deal with contacting (reading and communicating) and influencing the function of biological minds (egos within a biomorph, but also including animal life).
 Psi\-gamma is only available to characters with Level 2 of the Psi trait.
-Most psi\-gamma use is handled as an Opposed Test between the async and the target (p. 222).
+Most psi\-gamma use is handled as an Opposed Test between the async and the target (
+.BR 12-game-information "(Eclipse Phase)"
+).
 
 \fBAlienation\fR
 
@@ -797,7 +813,9 @@ r0 l l l0.
 .RS 1
 Alienation is an offensive sleight that create a sense of disconnection between an ego and its morph\[em]similar to that experienced when resleeved into a new body.
 The ego finds their body cumbersome, strange, and alien, almost like they are a prisoner within it.
-If the async beats the target in an Opposed Test, treat the test as a failed Integration Test (p. 272) for the target.
+If the async beats the target in an Opposed Test, treat the test as a failed Integration Test (
+.BR 10-accelerated-future "(Eclipse Phase)"
+) for the target.
 This effect lasts for the sleight's duration.
 
 .RE
@@ -849,7 +867,7 @@ r0 l l l0.
 | \f[B]Skill:\f[]       | Sense                 |
 .TE
 .RS 1
-Deep Scan is a more intrusive version of Thought Browse (p. 228), made to extract information from the targeted individual.
+Deep Scan is a more intrusive version of Thought Browse (above), made to extract information from the targeted individual.
 If the Opposed Test succeeds, the async telepathically invades the target's mind and can probe it for information.
 For every 10 full points of MoS the async achieves on their test, they retrieve one piece of information.
 Each item takes one full Action Turn to retrieve, during which the sleight must be sustained.
