Finish re-referencing 08-mind-hacks

--- a/08-mind-hacks.6
+++ b/08-mind-hacks.6
@@ -241,7 +241,9 @@ This disorder may be treated over time, according to normal rules (see Mental He
 ).
 .IP \[bu] 2
 Characters with the Psi trait are also vulnerable to infection by other strains of the Exsurgent virus.
-The character suffers a \fI\-20\fR modifier when resisting Exsurgent infection (p. 362).
+The character suffers a \fI\-20\fR modifier when resisting Exsurgent infection (
+.BR 12-game-information "(Eclipse Phase)"
+).
 .IP \[bu] 2
 Critical failures when using psi tend to stress the async's mind.
 Each time a critical failure is rolled when making a sleight\-related test, the async suffers a temporary brain seizure.
@@ -398,7 +400,9 @@ If the async rolls a critical failure, they suffer temporary incapacitation as t
 
 If a psi user rolls a critical success against a defender, or the defender rolls a critical failure, double the potency of the sleight's effect.
 In the case of psi attacks, the DV can be doubled or mental armor can be bypassed.
-Alternately, when using Psi Assault (p. 183), the targeted character may be in danger of infection by the Watts\-Macleod strain (
+Alternately, when using Psi Assault (
+.BR 06-skills "(Eclipse Phase)"
+), the targeted character may be in danger of infection by the Watts\-Macleod strain (
 .BR 12-game-information "(Eclipse Phase)"
 ).
 
@@ -908,7 +912,9 @@ r0 l l l0.
 .RS 1
 Ego Sense can be used to detect the presence and location of other sentient and biological life forms (i.e., egos) within the async's range.
 To detect these life forms, the async makes a single Sense Test, opposed by each life form within range.
-The async may suffer a modifier for detecting small animals and insects, similar to the modifier applied for targeting them in ranged combat (see p. 193); likewise, a modifier for detecting larger life forms may also be applied.
+The async may suffer a modifier for detecting small animals and insects, similar to the modifier applied for targeting them in ranged combat (see
+.BR 07-action-and-combat "(Eclipse Phase)"
+); likewise, a modifier for detecting larger life forms may also be applied.
 If successful, the async has detected that the life form is nearby.
 Every 10 full points of MoS will ascertain another piece of information regarding the detected life: direction from async, approximate size, type of creature, distance from async, etc.
 The async will know if the target moves, if they do so during the sleight's duration.
@@ -950,7 +956,9 @@ This memory very obviously does not belong to the target\[em]there is no way the
 The intent is not to fake memories, but to place one of the async's memories in the target's mind so that the target can access it just like any other memory.
 This can be useful for \[lq]archiving\[rq] important data with an ally, providing a literal alternate perspective, or simply making a \[lq]data dump\[rq] for the target to peruse.
 Implant Memory requires an Opposed Test against unwilling participants.
-At the gamemaster's discretion, particularly traumatic memories might inflict mental stress on the recipient (p. 215).
+At the gamemaster's discretion, particularly traumatic memories might inflict mental stress on the recipient (
+.BR 07-action-and-combat "(Eclipse Phase)"
+).
 
 .RE
 \fBImplant skill\fR
@@ -1272,7 +1280,9 @@ It lasts for 1 week per 10 points of MoS.
 If the subject rolls higher, or if the psychosurgeon fails their roll, the attempt does not work.
 
 The timeframe listed for psychosurgical procedures is according to the patient's subjective point of view.
-Since most subjects are treated in a simulspace, time acceleration may drastically reduce the amount of real\-time such a procedure requires (see Defying Nature's Laws, pp. 240\[en]241).
+Since most subjects are treated in a simulspace, time acceleration may drastically reduce the amount of real\-time such a procedure requires (see Defying Nature's Laws,
+.BR 09-the-mesh "(Eclipse Phase)"
+).
 
 \fBMental stress\fR
 
@@ -1460,7 +1470,8 @@ nospaces tab(|);
 .TE
 .RS 1
 Therapeutic psychosurgery is beneficial for characters suffering from mental stress, traumas, and disorders.
-A successful Psychosurgery Test applies a +30 modifier to mental healing tests, as noted on p. 215.
+A successful Psychosurgery Test applies a +30 modifier to mental healing tests, as noted in
+.BR 07-action-and-combat "(Eclipse Phase)"
 
 .RE
 \fBSkill imprints\fR
@@ -1504,7 +1515,9 @@ r0 l l l0.
 .RS 1
 Tasping is the use of deep brain stimulation techniques to tickle the mind's pleasure centers.
 Though this procedure is often used for therapeutic purposes for patients suffering from depression or other mental illnesses, the intent with tasping is to overload the subject into a prolonged state of almost unendurable bliss.
-Such stimulation is highly addictive, however, so character's exposed to it for any length of time (over 1 hour, subjective) are likely to pick up the Addiction trait (p. 148).
+Such stimulation is highly addictive, however, so character's exposed to it for any length of time (over 1 hour, subjective) are likely to pick up the Addiction trait (
+.BR 05-character-creation-and-advancement "(Eclipse Phase)"
+).
 Some criminal organizations have been known to use tasping addiction and rewards as a means of controlling those under their thrall.
 
 .RE
